ben-nanonote: build linux-kexecboot uImage (disabled by default)
Signed-off-by: Andrea Adami <andrea.adami@gmail.com>

--- a/conf/machine/ben-nanonote.conf
+++ b/conf/machine/ben-nanonote.conf
@@ -6,7 +6,10 @@ TARGET_ARCH = "mipsel"
 require conf/machine/include/tune-mips32.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-jlime-ben-nanonote"
-KERNEL_IMAGETYPE = "uImage"
+
+# With 2.6.37 there is not yet uImage target (pending patches)
+#KERNEL_IMAGETYPE = "uImage"
+KERNEL_IMAGETYPE = "vmlinux.bin"
 
 IMAGE_FSTYPES ?= "jffs2"
 
@@ -21,3 +24,9 @@ MACHINE_DISPLAY_WIDTH_PIXELS = "320"
 MACHINE_DISPLAY_HEIGHT_PIXELS = "240"
 LOGO_SIZE = "qvga"
 
+##################################
+# build kexecboot kernel while
+# making sure rootfs is compatible
+##################################
+
+# require conf/machine/include/initramfs-kexecboot.inc
