angstrom: name release after branch
Signed-off-by: Koen Kooi <koen@dominion.thruhere.net>
Acked-by: Graeme Gregory <dp@xora.org.uk>
Acked-by: Philip Balister <philip@balister.org>

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -13,9 +13,8 @@
 # For more contact info please visit
 #    http://www.angstrom-distribution.org/contact
 
-#DISTRO_VERSION = "2009.X"
-DISTRO_VERSION = "2010.7-test-${DATE}"
-DISTRO_REVISION = "3"
+DISTRO_VERSION = "2011.03"
+DISTRO_REVISION = "4"
 DISTRO_PR = ".6"
 
 OLDEST_KERNEL ?= "2.6.16"
