angstrom 2011.03 blacklist bash-noemu
It doesn't build and has the dreaded replaces/conflicts combo

Based on http://cgit.openembedded.org/cgit.cgi/openembedded/commit/?id=8a9ce9d369a0a6ec9d4de2e5dc747de7e9583b14

Signed-off-by: Koen Kooi <koen@dominion.thruhere.net>

--- a/conf/distro/angstrom-2008.1.conf
+++ b/conf/distro/angstrom-2008.1.conf
@@ -132,6 +132,9 @@ ANGSTROM_BLACKLIST_pn-fso-apm       = "regular apmd is good enough"
 
 ANGSTROM_BLACKLIST_pn-ipkg			= "ipkg has been superseded by opkg"
 
+ANGSTROM_BLACKLIST_pn-bash-noemu	= "doesn't work on the target"
+PREFERRED_PROVIDER_bash				= "bash"
+
 ANGSTROMLIBC ?= "glibc"
 
 require conf/distro/include/angstrom.inc
