angstrom-jalimo: use cacao-native hg version for javac-native
* build java packages is more stable than with jamvm

Signed-off-by: Henning Heinold <h.heinold@tarent.de>
Acked-by: Koen Kooi <koen@dominion.thruhere.net>
Signed-off-by: Stefan Schmidt <stefan@buglabs.net>

--- a/conf/distro/include/angstrom-jalimo.conf
+++ b/conf/distro/include/angstrom-jalimo.conf
@@ -5,9 +5,8 @@ PREFERRED_VERSION_jamvm-initial = "1.4.5"
 PREFERRED_VERSION_classpath-initial = "0.93"
 
 # Native VM
-PREFERRED_PROVIDER_virtual/java-native = "jamvm-native"
-PREFERRED_VERSION_jamvm-native = "1.5.3"
-#PREFERRED_VERSION_cacao-native = "0.99.3"
+PREFERRED_PROVIDER_virtual/java-native ?= "cacao-native"
+SRCREV_pn-cacao-native ?= "c7bf150bfa46"
 PREFERRED_VERSION_classpath-native = "0.98"
 
 # Native compiler settings
