--- a/recipes/rxvt-unicode/files/makefile.patch
+++ b/recipes/rxvt-unicode/files/makefile.patch
@@ -1,4 +1,4 @@
---- ../rxvt-unicode-cvs-r0/rxvt-unicode/Makefile.in	2004-08-12 22:32:40 +01:00
+--- rxvt-unicode/Makefile.in	2004-08-12 22:32:40 +01:00
 +++ rxvt-unicode/Makefile.in	2004-12-24 03:09:00 +00:00
 @@ -9,7 +9,7 @@
  first_rule: all
