--- a/conf/machine/bug20.conf
+++ b/conf/machine/bug20.conf
@@ -47,7 +47,7 @@ UBINIZE_ARGS = "-m 2048 -p 128KiB -s 512"
 PREFERRED_VERSION_u-boot = "git"
 
 # and sdio
-MACHINE_FEATURES = "kernel26 screen apm usbgadget usbhost vfat alsa"
+MACHINE_FEATURES = "kernel26 screen apm usbgadget usbhost vfat alsa wifi bluetooth"
 
 # We don't provide a bug20 x-load config yet
 XLOAD_MACHINE = "omap3530beagle_config"
