--- a/conf/machine/omap4430-panda.conf
+++ b/conf/machine/omap4430-panda.conf
@@ -4,12 +4,10 @@
 
 require conf/machine/include/omap3.inc
 
-EXTRA_IMAGEDEPENDS = "x-load-rsalveti u-boot-sakoman "
-
 XLOAD_MACHINE = "omap4430panda_config"
 XLOAD_LOAD_ADDRESS = 0x40304350
 
-PREFERRED_PROVIDER_virtual/bootloader = "u-boot-sakoman"
+PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 UBOOT_MACHINE = "omap4_panda_config"
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-omap4"
