--- a/recipes/uwsgi/files/uwsgi.ini
+++ b/recipes/uwsgi/files/uwsgi.ini
@@ -3,6 +3,7 @@ socket = 127.0.0.1:5000
 master = true
 daemonize = /var/log/uwsgi.log
 processes = 1
-env = PYTHONPATH=$PYTHONPATH:/var/www
-module = demo
+env = PYTHONPATH=$PYTHONPATH:/var
+module = www
 callable = app
+touch-reload = /etc/uwsgi.reload
